new branch changes

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               />
             </div>
             <div class="service-content">
-              <h3>Interior wash</h3>
+              <h3>Interior washing sample</h3>
               <p>
                 Complete interior and exterior detailing including wax, polish,
                 and interior shampoo.
